--- a/extension/package.json
+++ b/extension/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.6.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.408.0",
     "plasmo": "0.88.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1"
+    "react-router-dom": "^6.24.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -32,9 +40,10 @@
       "https://*/*"
     ],
     "permissions": [
+      "tabs",
       "storage",
-      "background",
-      "activeTab"
+      "activeTab",
+      "windows"
     ]
   }
 }
