Added auth logic and background scripts

--- a/extension/package.json
+++ b/extension/package.json
@@ -39,11 +39,16 @@
     "host_permissions": [
       "https://*/*"
     ],
+    "background": {
+      "service_worker": "background/index.ts",
+      "type": "module"
+    },
     "permissions": [
       "tabs",
-      "storage",
       "activeTab",
-      "windows"
+      "storage",
+      "windows",
+      "alarms"
     ]
   }
 }
