added idle tracking

--- a/extension/package.json
+++ b/extension/package.json
@@ -52,7 +52,8 @@
       "storage",
       "windows",
       "alarms",
-      "unlimitedStorage"
+      "unlimitedStorage",
+      "idle"
     ]
   }
 }
